--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@supabase/supabase-js": "^2.48.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "danfojs-node": "^1.1.2",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
