--- a/package.json
+++ b/package.json
@@ -25,12 +25,11 @@
     "@supabase/supabase-js": "^2.48.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "danfojs-node": "^1.1.2",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
-    "next": "15.1.7",
+    "next": "^15.3.1",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
